--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,4 +10,11 @@
         android:text="Profile fragment"
         android:layout_centerInParent="true"/>
 
+    <Button
+        android:id="@+id/btnShowNotification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show Notification" />
+
+
 </RelativeLayout>
