Added Room Database

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,12 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/edtTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="Profile fragment"
-        android:layout_centerInParent="true"/>
+        android:layout_below="@id/btnSave"
+        android:layout_marginTop="20dp"
+        android:background="@null"
+        android:hint="Movie Title"
+        android:minHeight="30dp" />
+
+    <EditText
+        android:id="@+id/edtDuration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edtTitle"
+        android:layout_marginTop="20dp"
+        android:background="@null"
+        android:hint="Duration"
+        android:inputType="number"
+        android:minHeight="30dp"
+        android:paddingTop="10dp" />
 
     <Button
         android:id="@+id/btnShowNotification"
@@ -20,30 +35,29 @@
         android:id="@+id/btnRetrofitRequest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Retrofit request"
-        android:layout_toRightOf="@id/btnShowNotification"/>
+        android:layout_toRightOf="@id/btnShowNotification"
+        android:text="Retrofit request" />
 
     <Button
-        android:id="@+id/btnAdd"
+        android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add"
-        android:layout_below="@id/btnRetrofitRequest"/>
+        android:layout_below="@id/btnRetrofitRequest"
+        android:text="Save" />
 
     <Button
         android:id="@+id/btnGet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Get"
-        android:layout_below="@id/btnRetrofitRequest"
-        android:layout_toRightOf="@id/btnAdd"/>
-    <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        android:layout_below="@id/btnRetrofitRequest"
-        android:layout_toRightOf="@id/btnGet"/>
+        android:layout_toRightOf="@id/btnSave"
+        android:layout_below="@id/btnShowNotification"
+        android:text="Get" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSavedRecords"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/edtDuration" />
 
 </RelativeLayout>
