--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,13 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Profile fragment"
-        android:textSize="30sp" />
-
     <Button
         android:id="@+id/btnShowNotification"
         android:layout_width="wrap_content"
@@ -29,5 +22,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/btnRetrofitRequest"
         android:text="Add and Get from DB" />
+
+    <Button
+        android:id="@+id/btnGetMovies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnRetrofitRequest"
+        android:layout_toRightOf="@id/btnAdd"
+        android:text="Get Movies" />
 
 </RelativeLayout>
